k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nizar-apps
  labels:
    name: nizar-apps
    environment: production
