k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nizar-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: nginx
        ports:
        - containerPort: 80
