k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nizar-sample-app-service
spec:
  type: LoadBalancer
  selector:
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
